--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 title: Hacked Jekyll
 description: Jekyll microtheme that looks like JSON
 baseurl: ""
-url: https://piazzai.github.io/hacked-jekyll
+url: https://liaocs2008.github.io
 
-theme: hacked-jekyll
+remote_theme: hacked-jekyll
 
 exclude:
   - LICENSE
