add color config

--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,17 @@ description: Jekyll microtheme that looks like JSON
 baseurl: ""
 url: https://liaocs2008.github.io
 
+#theme: hacked-jekyll # for local test
 remote_theme: hacked-jekyll
+
+lowercase: true
+color_bg: var(--oc-gray-9)
+color_punct: var(--oc-green-9)
+color_keyval: var(--oc-green-4)
+color_hover: var(--oc-green-5)
+show_quotes: true
+show_commas: true
+target: "_self"
 
 exclude:
   - LICENSE
