--- a/_data/json.yml
+++ b/_data/json.yml
@@ -22,6 +22,8 @@
       url: https://www.linkedin.com/in/liaocs2008
     - value: Scholar
       url: https://scholar.google.com/citations?user=aJOAmTEAAAAJ&hl=en
+    - value: Google Map
+      url: https://www.google.com/maps/d/viewer?mid=19LnRoEQ8CgnnMc3oouHnyb5dCjHZrr2e&usp=sharing 
 - key: Quotes
   value:
     - 仰观宇宙之大，俯察品类之盛。所以游目骋怀，足以极视听之娱，信可乐也
